  08 Mar 2018; Manuel Friedli <manuel@fritteli.ch>
  -files/0001-gitlab-gitaly-0.10.0-fix-Makefile.patch,
  -files/0002-gitlab-gitaly-0.11.2-fix-config.toml.example.patch,
  -gitlab-gitaly-0.10.0.ebuild, -gitlab-gitaly-0.11.2-r1.ebuild,
  -gitlab-gitaly-0.21.2.ebuild, -gitlab-gitaly-0.3.0.ebuild,
  -gitlab-gitaly-0.6.0.ebuild:
  www-servers/gitlab-gitaly:  Purge obsolete versions of gitlab-gitaly

*gitlab-gitaly-0.66.0 (19 Feb 2018)

  19 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/0002-gitlab-gitaly-0.66.0-fix-config.toml.example.patch,
  +files/gitlab-gitaly-0.66.0.conf, +files/gitlab-gitaly-0.66.0.init,
  +gitlab-gitaly-0.66.0.ebuild:
  www-servers/gitlab-gitaly:  Add ebuild for version 0.66.0

*gitlab-gitaly-0.59.2 (17 Feb 2018)

  17 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/0002-gitlab-gitaly-0.59.2-fix-config.toml.example.patch,
  +gitlab-gitaly-0.59.2.ebuild:
  www-servers/gitlab-gitaly:  Add ebuild for version 0.59.2.

*gitlab-gitaly-0.52.1 (16 Feb 2018)

  16 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-gitaly-0.52.1.ebuild:
  www-servers/gitlab-gitaly:  Add ebuild for version 0.52.1.

  15 Feb 2018; Manuel Friedli <manuel@fritteli.ch> gitlab-gitaly-0.43.1.ebuild:
  www-servers/gitlab-gitaly:  Fix github issue #49, hopefully.

  15 Feb 2018; Manuel Friedli <manuel@fritteli.ch> gitlab-gitaly-0.43.1.ebuild:
  www-servers/gitlab-gitaly:  Add dev-ruby/bundler to DEPENDS.

*gitlab-gitaly-0.43.1 (06 Nov 2017)

  06 Nov 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0002-gitlab-gitaly-0.43.1-fix-config.toml.example.patch,
  +gitlab-gitaly-0.43.1.ebuild, gitlab-gitaly-0.10.0.ebuild,
  gitlab-gitaly-0.11.2-r1.ebuild, gitlab-gitaly-0.21.2.ebuild,
  gitlab-gitaly-0.3.0.ebuild, gitlab-gitaly-0.35.0-r2.ebuild,
  gitlab-gitaly-0.38.0-r1.ebuild, gitlab-gitaly-0.6.0.ebuild:
  www-servers/gitlab-gitaly:  Add version 0.43.1, fix obsolete inheritance and
  header.

*gitlab-gitaly-0.35.0-r2 (25 Sep 2017)