@@ -1,3 +1,9 @@
+*gitlab-gitaly-0.81.0 (09 Mar 2018)
+
+  09 Mar 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-gitaly-0.81.0.ebuild:
+  www-servers/gitlab-gitaly:  Add ebuild for version 0.81.0, dependency of
+  gitlab-ce-10.5.4
+
   08 Mar 2018; Manuel Friedli <manuel@fritteli.ch>
   -files/0001-gitlab-gitaly-0.10.0-fix-Makefile.patch,
   -files/0002-gitlab-gitaly-0.11.2-fix-config.toml.example.patch,
